--- a/common/css/style.scss
+++ b/common/css/style.scss
@@ -117,6 +117,53 @@
     }
 
     &.contents_04{
+        .maplestory_wedding{
+
+            padding: 30px;
+            border: 3px solid #f1f1f1;
+            border-radius: 30px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+            &_img{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 30px;
+            }
+
+            .maple_baby{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                p{
+                    flex: 1;
+                    font-family: 'Maplestory';
+                }
+                &.hyeran{
+                    p{
+                        margin-right: 10px;
+                        text-align: right;
+                    }
+                    & > img{
+                        width: 30%;
+                    }
+                }
+                &.jongmin{
+                    p{
+                        margin-left: 10px;
+                        text-align: left;
+                    }
+                    & > img{
+                        width: 25%;
+                    }
+                }
+            }
+        }
+    }
+
+    &.contents_05{
         h6{
             margin-bottom: 20px;
             font-size: 20px;
@@ -150,7 +197,7 @@
             width: 20px;
             height: 20px;
             font-size: 0;
-            background-image: url('/common/image/icon_arrow.png');
+            background-image: url('../image/icon_arrow.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
