--- a/common/css/style.scss
+++ b/common/css/style.scss
@@ -50,7 +50,7 @@
 
     h6{
         margin-bottom: 20px;
-        font-size: 30px;
+        font-size: 20px;
         font-weight: bold;
         font-family: 'Gowun Batang', serif;
         text-align: center;
@@ -116,7 +116,81 @@
         }
     }
 
-    &.contents_04{
+	&.contents_03{
+		h6{
+			img:first-of-type{
+				width: 40%;
+				margin-bottom: 10px;
+			}
+			img:last-of-type{
+				width: 60%;
+			}
+		}
+	}
+
+	&.contents_04{
+		position: relative;
+
+        &::after{
+            position: absolute;
+            left: 50%;
+			bottom: 0;
+            transform: translate(-50%, 0);
+            content: '';
+            width: 100px;
+            height: 1px;
+            background-color: #f1f1f1;
+        }
+
+		.map{
+			opacity: 0.7;
+		}
+
+		.box_wrapper{
+			position: relative;
+			margin-top: 30px;
+			padding-top: 30px;
+
+			&::before{
+				position: absolute;
+				top: 0;
+				left: 50%;
+				transform: translate(-50%, 0);
+				content: '';
+				width: 30px;
+				height: 1px;
+				background-color: #f1f1f1;
+			}
+
+			.box{
+				display: flex;
+				flex-direction: row;
+				align-items: flex-start;
+				justify-content: flex-start;
+				font-size: 12px;
+
+				b{
+					display: inline-block;
+					width: 40px;
+					font-weight: 900;
+				}
+				span{
+					flex: 1;
+				}
+			}
+		}
+	}
+
+    &.contents_05{
+        h6{
+            margin-bottom: 20px;
+            font-size: 20px;
+        }
+    }
+
+	&.easter_egg{
+		display: none;
+		
         .maplestory_wedding{
 
             padding: 30px;
@@ -160,13 +234,6 @@
                     }
                 }
             }
-        }
-    }
-
-    &.contents_05{
-        h6{
-            margin-bottom: 20px;
-            font-size: 20px;
         }
     }
 
@@ -352,6 +419,19 @@
     }
 }
 
+.button_wrapper{
+	display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+	.easter_egg_btn{
+		width: 30px;
+		margin: 0 auto;
+		margin-bottom: 30px;
+	}
+}
+
 footer{
     padding: 30px;
     background-color: #f1f1f1;
@@ -431,356 +511,397 @@ footer{
     @keyframes #{$animationName} {
       @content;
     }
-  }
+}
   
-  // Prefixes properties with browser specific tags
-  @mixin prefix($declarations, $prefixes: webkit moz) {
-    @each $property,
-    $value in $declarations {
-      @each $prefix in $prefixes {
-        #{'-' + $prefix + '-' + $property}: $value;
-      }
-      // Output standard non-prefixed declaration
-      #{$property}: $value;
+// Prefixes properties with browser specific tags
+@mixin prefix($declarations, $prefixes: webkit moz) {
+  @each $property,
+  $value in $declarations {
+    @each $prefix in $prefixes {
+      #{'-' + $prefix + '-' + $property}: $value;
+    }
+    // Output standard non-prefixed declaration
+    #{$property}: $value;
+  }
+}
+
+// clearfix hack
+@mixin clearfix {
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+
+// Centers an element using the absolute positioning hack
+@mixin absolute-center {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+////////////////////////////////////////////////////////////
+@include keyframes(animate-body) {
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
+}
+   
+//---------------------
+// # Gallery Items
+//---------------------
+.image-gallery {
+  width: 100%;
+  height: auto;
+  overflow: auto;
+
+  &-items {
+    position: relative;
+    @include clearfix;
+  }
+}
+
+.gallery-item {
+  position: relative;
+  float: left;
+  width: 25%;
+  padding: 1px;
+  margin: 0;
+
+  cursor: pointer;
+  text-align: center;
+
+  @include prefix((user-select: none));
+  > div {
+    position: relative;
+    &:before {
+      content: "";
+      display: block;
+      padding-top: 100%;
     }
   }
-  
-  // clearfix hack
-  @mixin clearfix {
-    &:before,
+}
+
+.thumbnail {
+  background-color: #f1f1f1;
+  overflow: hidden;
+  @include absolute-center;
+
+  &:after {
+    content: "";
+    display: block;
+    overflow: hidden;
+    @include absolute-center;
+  }
+
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-height: 100%;
+    max-width: inherit;
+    @include prefix(( transform: translate(-50%, -50%), transition: transform 150ms ease-in-out));
+  }
+
+  span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    @include prefix(( transform: translate(50%, 50%)));
+  }
+  &:hover img {
+    @include prefix((transform: translate(-50%, -50%) scale(1.15)));
+  }
+}
+
+//---------------------
+// # Popup
+//---------------------
+
+.mfp {
+  &-bg {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1042;
+    overflow: hidden;
+    position: fixed;
+    background: #0b0b0b;
+    opacity: 0.8;
+  }
+  &-wrap {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1043;
+    position: fixed;
+    outline: none !important;
+    @include prefix((backface-visibility: hidden));
+  }
+
+  &-container {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    padding: 0 8px;
+    box-sizing: border-box;
+    
+    &:before {
+      content: '';
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
+    }
+
+	&-close {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		width: 44px;
+		height: 44px;
+		line-height: 44px;
+		text-decoration: none;
+		text-align: center;
+		opacity: 0.65;
+		padding: 0;
+		color: #fff;
+		background: none;
+		border: none;
+		font-style: normal;
+		font-size: 0;
+	
+		background-image: url("../image/btn_close_mg_popup.png");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: contain;
+	
+		&:hover,
+		&:focus {
+		  opacity: 1;
+		  cursor: pointer;
+		  outline: 0;
+		}
+		&:active {
+		  top: 1px;
+		}
+	  }
+  }
+
+  &-content {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 auto;
+    text-align: left;
+    z-index: 1045;
+  }
+
+  &-inline-holder &-content,
+  &-ajax-holder &-content{
+    width: 100%;
+    cursor: auto;
+  }
+
+  &-hide { display: none !important; }
+
+  &-close {
+	position: absolute;
+	top: 10px;
+    right: 10px;
+    width: 44px;
+    height: 44px;
+    line-height: 44px;
+    text-decoration: none;
+    text-align: center;
+    opacity: 0.65;
+    padding: 0;
+    color: #fff;
+    background: none;
+    border: none;
+    font-style: normal;
+    font-size: 0;
+
+	background-image: url("../image/btn_close_mg_popup.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+
+    &:hover,
+    &:focus {
+      opacity: 1;
+      cursor: pointer;
+      outline: 0;
+    }
+    &:active {
+      top: 1px;
+    }
+  }
+
+  &-image-holder &-close {
+    color: #fff;
+    right: -6px;
+    text-align: right;
+    padding-right: 6px;
+    width: 100%;
+  }
+
+  &-image-holder &-content {
+    max-width: 100%;
+  }
+
+  &-img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    line-height: 0;
+    box-sizing: border-box;
+    padding: 40px 0;
+    margin: 0 auto;
+  }
+
+  &-figure {
+    line-height: 0;
+    cursor: pointer;
+
     &:after {
-      content: " ";
-      display: table;
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 40px;
+      bottom: 40px;
+      display: block;
+      right: 0;
+      width: auto;
+      height: auto;
+      z-index: -1;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+      background: #444;
     }
-    &:after {
-      clear: both;
+    small {
+      color: #bdbdbd;
+      display: block;
+      font-size: 12px;
+      line-height: 14px;
     }
+    figure {
+      margin: 0;
+    }
+
+	.mfp-close{
+		background-image: initial;
+	}
   }
-  
-  // Centers an element using the absolute positioning hack
-  @mixin absolute-center {
+
+  &-bottom-bar {
+    margin-top: -40px + 4;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    cursor: auto;
+  }
+
+  &-title {
+    text-align: left;
+    line-height: 18px;
+    color: #f3f3f3;
+    word-wrap: break-word;
+    padding-right: 36px;
+  }
+
+  &-counter {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 0;
-    left: 0;
+    color: #f3f3f3;
+    font-size: 12px;
+    line-height: 18px;
+	font-family: 'Gowun Batang', serif;
+    white-space: nowrap;
   }
-  
 
-  ////////////////////////////////////////////////////////////
-  @include keyframes(animate-body) {
-    0% { background-position: 0% 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0% 50% }
-  }
-   
-  //---------------------
-  // # Gallery Items
-  //---------------------
-  .image-gallery {
-    width: 100%;
-    height: auto;
-    overflow: auto;
-
-    &-items {
-      position: relative;
-      @include clearfix;
-    }
-  }
-  
-  .gallery-item {
-    position: relative;
-    float: left;
-    width: 25%;
-    padding: 1px;
+  &-arrow {
+    position: absolute;
+    opacity: 0.65;
     margin: 0;
-
+    top: 50%;
+    margin-top: -55px;
+    padding: 0;
+    width: 90px;
+    height: 110px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background: none;
+    border: none;
     cursor: pointer;
-    text-align: center;
-
-    @include prefix((user-select: none));
-    > div {
-      position: relative;
-      &:before {
-        content: "";
-        display: block;
-        padding-top: 100%;
-      }
+    
+    &:active {
+      margin-top: -54px;
     }
-  }
-  
-  .thumbnail {
-    background-color: #f1f1f1;
-    overflow: hidden;
-    @include absolute-center;
-
+    &:hover,
+    &:focus {
+      opacity: 1;
+    }
+    &:before,
     &:after {
-      content: "";
+      content: '';
       display: block;
-      overflow: hidden;
-      @include absolute-center;
-    }
-
-    img {
+      width: 0;
+      height: 0;
       position: absolute;
-      top: 0;
       left: 0;
-      max-height: 100%;
-      max-width: inherit;
-      @include prefix(( transform: translate(-50%, -50%), transition: transform 150ms ease-in-out));
-    }
-
-    span {
-      position: absolute;
       top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      @include prefix(( transform: translate(50%, 50%)));
+      margin-top: 35px;
+      margin-left: 35px;
+      border: medium inset transparent;
     }
-    &:hover img {
-      @include prefix((transform: translate(-50%, -50%) scale(1.15)));
+    &:after {
+      border-top-width: 13px;
+      border-bottom-width: 13px;
+      top: 8px;
+    }
+    &:before {
+      border-top-width: 21px;
+      border-bottom-width: 21px;
+      opacity: 0.7;
     }
   }
-  
-  //---------------------
-  // # Popup
-  //---------------------
-  
-  .mfp {
-    &-bg {
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1042;
-      overflow: hidden;
-      position: fixed;
-      background: #0b0b0b;
-      opacity: 0.8;
+
+  &-arrow-left {
+    left: 0;
+    &:after {
+      border-right: 17px solid #fff;
+      margin-left: 31px;
     }
-    &-wrap {
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1043;
-      position: fixed;
-      outline: none !important;
-      @include prefix((backface-visibility: hidden));
+    &:before {
+      margin-left: 25px;
+      border-right: 27px solid #3f3f3f;
     }
-  
-    &-container {
-      text-align: center;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
-      padding: 0 8px;
-      box-sizing: border-box;
-      
-      &:before {
-        content: '';
-        display: inline-block;
-        height: 100%;
-        vertical-align: middle;
-      }
-    }
-  
-    &-content {
-      position: relative;
-      display: inline-block;
-      vertical-align: middle;
-      margin: 0 auto;
-      text-align: left;
-      z-index: 1045;
-    }
-  
-    &-inline-holder &-content,
-    &-ajax-holder &-content{
-      width: 100%;
-      cursor: auto;
-    }
-  
-    &-hide { display: none !important; }
-  
-    &-close {
-      width: 44px;
-      height: 44px;
-      line-height: 44px;
-      position: absolute;
-      right: 0;
-      top: 0;
-      text-decoration: none;
-      text-align: center;
-      opacity: 0.65;
-      padding: 0 0 18px 10px;
-      color: #fff;
-      background: none;
-      border: none;
-      font-style: normal;
-      font-size: 28px;
-      font-family: Arial, Baskerville, monospace;
-  
-      &:hover,
-      &:focus {
-        opacity: 1;
-        cursor: pointer;
-        outline: 0;
-      }
-      &:active {
-        top: 1px;
-      }
-    }
-  
-    &-image-holder &-close {
-      color: #fff;
-      right: -6px;
-      text-align: right;
-      padding-right: 6px;
-      width: 100%;
-    }
-  
-    &-image-holder &-content {
-      max-width: 100%;
-    }
-  
-    &-img {
-      width: auto;
-      max-width: 100%;
-      height: auto;
-      display: block;
-      line-height: 0;
-      box-sizing: border-box;
-      padding: 40px 0;
-      margin: 0 auto;
-    }
-  
-    &-figure {
-      line-height: 0;
-      cursor: pointer;
-  
-      &:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 40px;
-        bottom: 40px;
-        display: block;
-        right: 0;
-        width: auto;
-        height: auto;
-        z-index: -1;
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-        background: #444;
-      }
-      small {
-        color: #bdbdbd;
-        display: block;
-        font-size: 12px;
-        line-height: 14px;
-      }
-      figure {
-        margin: 0;
-      }
-    }
-  
-    &-bottom-bar {
-      margin-top: -40px + 4;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      cursor: auto;
-    }
-  
-    &-title {
-      text-align: left;
-      line-height: 18px;
-      color: #f3f3f3;
-      word-wrap: break-word;
-      padding-right: 36px;
-    }
-  
-    &-counter {
-      position: absolute;
-      top: 0;
-      right: 0;
-      color: #f3f3f3;
-      font-size: 12px;
-      line-height: 18px;
-      white-space: nowrap;
-    }
-  
-    &-arrow {
-      position: absolute;
-      opacity: 0.65;
-      margin: 0;
-      top: 50%;
-      margin-top: -55px;
-      padding: 0;
-      width: 90px;
-      height: 110px;
-      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-      background: none;
-      border: none;
-      cursor: pointer;
-      
-      &:active {
-        margin-top: -54px;
-      }
-      &:hover,
-      &:focus {
-        opacity: 1;
-      }
-      &:before,
-      &:after {
-        content: '';
-        display: block;
-        width: 0;
-        height: 0;
-        position: absolute;
-        left: 0;
-        top: 0;
-        margin-top: 35px;
-        margin-left: 35px;
-        border: medium inset transparent;
-      }
-      &:after {
-        border-top-width: 13px;
-        border-bottom-width: 13px;
-        top: 8px;
-      }
-      &:before {
-        border-top-width: 21px;
-        border-bottom-width: 21px;
-        opacity: 0.7;
-      }
-    }
-  
-    &-arrow-left {
-      left: 0;
-      &:after {
-        border-right: 17px solid #fff;
-        margin-left: 31px;
-      }
-      &:before {
-        margin-left: 25px;
-        border-right: 27px solid #3f3f3f;
-      }
-    }
-  
-    &-arrow-right {
-      right: 0;
-      &:after {
-        border-left: 17px solid #fff;
-        margin-left: 39px
-      }
-      &:before {
-        border-left: 27px solid #3f3f3f;
-      }
-    }
-  
-    &-s-ready &-preloader { display: none !important }
   }
+
+  &-arrow-right {
+    right: 0;
+    &:after {
+      border-left: 17px solid #fff;
+      margin-left: 39px
+    }
+    &:before {
+      border-left: 27px solid #3f3f3f;
+    }
+  }
+
+  &-s-ready &-preloader { display: none !important }
+}
