--- a/common/css/style.css
+++ b/common/css/style.css
@@ -118,8 +118,45 @@
   height: 1px;
   background-color: #f1f1f1;
 }
-.contents.contents_04 .map {
+.contents.contents_04 .map img {
   opacity: 0.7;
+}
+.contents.contents_04 .map .pulsating-circle {
+  position: absolute;
+  top: 36.4%;
+  left: 47.3%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 30px;
+  height: 30px;
+  color: #000;
+  font-size: 30px;
+  border-radius: 50%;
+  z-index: -1;
+}
+.contents.contents_04 .map .pulsating-circle:before {
+  position: relative;
+  content: "";
+  display: block;
+  width: 300%;
+  height: 300%;
+  margin-top: -100%;
+  margin-left: -100%;
+  box-sizing: border-box;
+  border-radius: 50%;
+  background-color: rgba(216, 255, 0, 0.2);
+  animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+}
+.contents.contents_04 .map .pulsating-circle:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(216, 255, 0, 0.8);
+  border-radius: 50%;
+  animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
 }
 .contents.contents_04 .box_wrapper {
   position: relative;
