--- a/common/css/style.css
+++ b/common/css/style.css
@@ -54,8 +54,9 @@
 .contents.contents_01 {
   position: relative;
 }
-.contents.contents_01::before, .contents.contents_01::after {
+.contents.contents_01::before {
   position: absolute;
+  top: 0;
   left: 50%;
   transform: translate(-50%, 0);
   content: "";
@@ -63,18 +64,15 @@
   height: 1px;
   background-color: #f1f1f1;
 }
-.contents.contents_01::before {
-  top: 0;
-}
-.contents.contents_01::after {
-  bottom: 0;
-}
 .contents.contents_01 .who {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+}
+.contents.contents_01 .who span {
+  font-weight: 900;
 }
 .contents.contents_01 .who span:last-of-type {
   position: relative;
@@ -88,7 +86,7 @@
   transform: translate(0, -50%);
   content: "";
   width: 1px;
-  height: 70%;
+  height: 50%;
   background-color: #ddd;
 }
 .contents.contents_01 .where p {
@@ -96,39 +94,41 @@
 }
 .contents.contents_01 .invite {
   position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   margin-top: 30px;
   margin-bottom: 0px;
   padding-top: 30px;
-  line-height: 2;
+  padding-bottom: 0;
+}
+.contents.contents_01 .invite p {
+  line-height: 3;
   font-size: 12px;
   text-align: center;
 }
-.contents.contents_01 .invite::before {
+.contents.contents_01 .invite p span {
+  position: relative;
+  padding: 0 3px;
+  z-index: 1;
+  box-shadow: inset 0 -5px #ffe4fa;
+}
+.contents.contents_02 {
+  position: relative;
+}
+.contents.contents_02::before {
   position: absolute;
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
   content: "";
-  width: 4px;
-  height: 4px;
+  width: 3px;
+  height: 3px;
   background-color: #ddd;
   border-radius: 50%;
 }
-.contents.contents_02 h6 {
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-.contents.contents_03 h6 img:first-of-type {
-  width: 40%;
-  margin-bottom: 10px;
-}
-.contents.contents_03 h6 img:last-of-type {
-  width: 60%;
-}
-.contents.contents_04 {
-  position: relative;
-}
-.contents.contents_04::after {
+.contents.contents_02::after {
   position: absolute;
   left: 50%;
   bottom: 0;
@@ -138,13 +138,62 @@
   height: 1px;
   background-color: #f1f1f1;
 }
-.contents.contents_04 .map {
+.contents.contents_02 .who_wrapper {
+  padding: 12px 0 0 0;
+}
+.contents.contents_02 .who_wrapper .who {
+  font-size: 12px;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.contents.contents_02 .who_wrapper .who span {
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+}
+.contents.contents_02 .who_wrapper .who i {
+  display: inline-block;
+  margin-right: 2px;
+  font-size: 9px;
+  opacity: 0.6;
+  font-family: "Noto Serif KR", serif;
+  font-style: normal;
+  font-weight: 300;
+}
+.contents.contents_02 .who_wrapper .who b {
+  font-weight: 900;
+}
+.contents.contents_03 h6 {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+.contents.contents_04 h6 img:first-of-type {
+  width: 40%;
+  margin-bottom: 10px;
+}
+.contents.contents_04 h6 img:last-of-type {
+  width: 60%;
+}
+.contents.contents_05 {
   position: relative;
 }
-.contents.contents_04 .map img {
+.contents.contents_05::after {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
+  content: "";
+  width: 100px;
+  height: 1px;
+  background-color: #f1f1f1;
+}
+.contents.contents_05 .map {
+  position: relative;
+}
+.contents.contents_05 .map img {
   opacity: 0.7;
 }
-.contents.contents_04 .map .pulsating-circle {
+.contents.contents_05 .map .pulsating-circle {
   position: absolute;
   top: 66%;
   left: 46.7%;
@@ -156,7 +205,7 @@
   border-radius: 50%;
   z-index: -1;
 }
-.contents.contents_04 .map .pulsating-circle:before {
+.contents.contents_05 .map .pulsating-circle:before {
   position: relative;
   content: "";
   display: block;
@@ -169,7 +218,7 @@
   background-color: rgba(216, 255, 0, 0.2);
   animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
 }
-.contents.contents_04 .map .pulsating-circle:after {
+.contents.contents_05 .map .pulsating-circle:after {
   position: absolute;
   top: 0;
   left: 0;
@@ -181,12 +230,12 @@
   border-radius: 50%;
   animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
 }
-.contents.contents_04 .box_wrapper {
+.contents.contents_05 .box_wrapper {
   position: relative;
   margin-top: 30px;
   padding-top: 30px;
 }
-.contents.contents_04 .box_wrapper::before {
+.contents.contents_05 .box_wrapper::before {
   position: absolute;
   top: 0;
   left: 50%;
@@ -196,22 +245,22 @@
   height: 1px;
   background-color: #f1f1f1;
 }
-.contents.contents_04 .box_wrapper .box {
+.contents.contents_05 .box_wrapper .box {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
   font-size: 12px;
 }
-.contents.contents_04 .box_wrapper .box b {
+.contents.contents_05 .box_wrapper .box b {
   display: inline-block;
   width: 40px;
   font-weight: 900;
 }
-.contents.contents_04 .box_wrapper .box span {
+.contents.contents_05 .box_wrapper .box span {
   flex: 1;
 }
-.contents.contents_05 h6 {
+.contents.contents_06 h6 {
   margin-bottom: 20px;
   font-size: 20px;
 }
