--- a/common/css/style.css
+++ b/common/css/style.css
@@ -27,6 +27,7 @@
   position: relative;
   width: 50%;
   margin: 0 auto;
+  margin-top: -30px;
   font-size: 50px;
   font-weight: 900;
   text-align: center;
@@ -34,8 +35,16 @@
   z-index: 2;
 }
 .main_image {
-  margin-top: -70px;
-  z-index: 1;
+  position: relative;
+}
+.main_image::before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: "";
+  width: 100%;
+  height: 50%;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5));
 }
 
 .contents {
