--- a/common/css/style.scss
+++ b/common/css/style.scss
@@ -25,6 +25,10 @@
     align-items: center;
     justify-content: center;
 
+	.inner{
+		padding-bottom: 17px;
+	}
+
     &_date{
         position: relative;
         width: 50%;
@@ -170,17 +174,17 @@
 	&.contents_02{
 		position: relative;
 
-		&::before{
-			position: absolute;
-			top: 0;
-			left: 50%;
-			transform: translate(-50%, 0);
-			content: '';
-			width: 3px;
-			height: 3px;
-			background-color: #ddd;
-			border-radius: 50%;
-		}
+		// &::before{
+		// 	position: absolute;
+		// 	top: 0;
+		// 	left: 50%;
+		// 	transform: translate(-50%, 0);
+		// 	content: '';
+		// 	width: 3px;
+		// 	height: 3px;
+		// 	background-color: #ddd;
+		// 	border-radius: 50%;
+		// }
 
 		&::after{
             position: absolute;
@@ -284,7 +288,7 @@
 					margin-left: -100%;
 					box-sizing: border-box;
 					border-radius: 50%;
-					background-color: rgba(216, 255, 0, 0.2);
+					background-color: rgba(255, 228, 250, 0.5);
 					-webkit-animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
 					animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
 				} 
@@ -297,7 +301,7 @@
 					display: block;
 					width: 100%;
 					height: 100%;
-					background-color: rgba(216, 255, 0, 0.8);
+					background-color: #ffe4fa;
 					border-radius: 50%;
 					-webkit-animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
 					animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
@@ -535,7 +539,7 @@
                         margin-left: -100%;
                         box-sizing: border-box;
                         border-radius: 50%;
-                        background-color: rgba(216, 255, 0, 0.2);
+                        background-color: rgba(255, 228, 250, 0.5);
                         -webkit-animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
                         animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
                     } 
@@ -548,7 +552,7 @@
                         display: block;
                         width: 100%;
                         height: 100%;
-                        background-color: rgba(216, 255, 0, 0.8);
+                        background-color: #ffe4fa;
                         border-radius: 50%;
                         -webkit-animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
                         animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
@@ -622,7 +626,7 @@ footer{
 
                 &:hover,
                 &:active{
-                    text-decoration: underline 1px rgba(216, 255, 0, 1);
+                    text-decoration: underline 1px #ffe4fa;
                 }
 
                 svg{
